[package]
name = "property_profile_creator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"
thiserror = "2.0"
futures-util = "0.3"
serde_json = "1.0.141"
once_cell = "1.21"
regex = "1.11"
dotenvy = "0.15.7"
num-format = "0.4.4"
actix-web = "4.11.0"
tokio-stream = "0.1"
